compiler/c2/irTests/stringopts/TestArrayCopySelect.java